# amrl-vision

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  fix_opencv.sh  install.sh  install_opencv3.4.9.sh  opencv_version.cpp  opencv_version.sh  vision.sh
dark_objects/: CMakeLists.txt  package.xml
dark_objects/cfg/: DarkObjects.cfg
dark_objects/launch/: dark_objects.launch
dark_objects/src/: dark_node.py  display.py  nms.py
hazmat_detection/: CMakeLists.txt  nodelet.xml  package.xml
hazmat_detection/include/hazmat_detection/: hazmat_detection.h  neural_network.h
hazmat_detection/launch/: webcam.launch
hazmat_detection/src/: hazmat_detection.cpp  neural_network.cpp  node.cpp  nodelet.cpp  webcam.cpp
image_view/: CMakeLists.txt  nodelet.xml  package.xml
image_view/include/image_view/: image_view.h
image_view/src/: image_view.cpp  node.cpp  nodelet.cpp
ipcamera_ros/: CMakeLists.txt  package.xml
ipcamera_ros/include/ipcamera/: ipcamera_node.hpp
ipcamera_ros/launch/: manipulator.launch
ipcamera_ros/src/: ipcamera_node.cpp
mjpeg_streamer/: CMakeLists.txt  nodelet.xml  package.xml
mjpeg_streamer/include/mjpeg_streamer/: mjpeg_streamer.h  mjpeg_writer.h
mjpeg_streamer/src/: mjpeg_streamer.cpp  mjpeg_writer.cpp  node.cpp  nodelet.cpp
motion_detection/: CMakeLists.txt  nodelet.xml  package.xml
motion_detection/cfg/: MotionDetection.cfg
motion_detection/include/motion-detection/: motion_detection.h
motion_detection/launch/: motion_detection.launch  motion_detection_nodelet.launch
motion_detection/src/: motion_detection.cpp  node.cpp  nodelet.cpp
optris_drivers/: .gitignore
optris_drivers/config/: Cali-14020049.xml
optris_drivers/launch/: 14020049_optris_drivers.launch
optris_drivers/src/: OptrisImager.cpp  OptrisImager.h  optris_imager_node.cpp
optris_drivers/udev/: 88-optris.rules
qrcode_detection/: CMakeLists.txt  LICENSE  nodelet.xml  package.xml
qrcode_detection/cfg/: QRCode.cfg
qrcode_detection/include/qrcode_detection/: object_tf.h  qrcode_detection.h  qrcode_reader.h  visualizer.h
qrcode_detection/launch/: qr_code.launch  qr_code_nodelet.launch
qrcode_detection/msg/: QRCode.msg  QRCodes.msg
qrcode_detection/src/: node.cpp  nodelet.cpp  object_tf.cpp  qrcode_detection.cpp  qrcode_reader.cpp  visualizer.cpp
rtsp_streamer/: CMakeLists.txt  package.xml
rtsp_streamer/include/rtsp_streamer/: rtsp_streamer.h
rtsp_streamer/src/: mjpeg_writer.cpp  node.cpp  rtsp_streamer.cpp
vision_aggregator/: CMakeLists.txt  nodelet.xml  package.xml
vision_aggregator/include/vision_aggregator/: vision_aggregator.h
vision_aggregator/src/: node.cpp  nodelet.cpp  vision_aggregator.cpp
vision_common/: CMakeLists.txt  package.xml
vision_common/msg/: Box.msg  Boxes.msg  Perception.msg  Perceptions.msg
vision_display/: CMakeLists.txt  package.xml
vision_display/launch/: display.launch
vision_display/scripts/: display-node.py
vision_launch/: CMakeLists.txt  package.xml
vision_launch/launch/: full.launch  nodelet.launch  openni2.launch
