<?xml version="1.0"?>
<package format="2">
  <name>amrl_dark_objects</name>
  <version>0.0.1</version>
  <description>The AMRL Dark Objects detector package</description>
  <maintainer email="javadomnia@hotmail.com">Mohamad Javad Jafari</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
